--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,23 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="firstname">First name</string>
+    <string name="lastname">Last Name</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="confirmpassword">Confirm Password</string>
+    <string name="Roles">roles</string>
+    <string name="update">Update</string>
+    <string name="cancel">Cancel</string>
+    <string name="Insert">Insert</string>
+    <string-array name="empdesg">
+        <item>--None Selected--</item>
+        <item>Accounting</item>
+        <item>Sales</item>
+        <item>Plant</item>
+        <item>Shipping</item>
+        <item>Quality Control</item>
+
+
+    </string-array>
 </resources>
